--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Sam Kuhlmann",
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "commander": "^2.15.1",
     "express": "^4.16.3",
     "less": "^3.0.1",
