--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "less": "^3.0.1",
     "less-watch-compiler": "^1.11.0",
     "nodemon": "^1.17.2"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1"
   }
 }
